--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,7 +20,9 @@ jobs:
       - name: Python install
         run: |
           python -m pip install --upgrade pip
+          python -m pip install "pydantic<2.0.0"
           python -m pip install "lander<2.0.0"
+
 
       - name: TeX build
         run: |
